--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   auto_size_text_field: ^2.2.4
   google_maps_flutter: ^2.10.0
   google_maps_flutter_web: ^0.5.10
+  firebase_storage: ^12.4.5
+  image_picker: ^1.0.4
+  file_picker: ^6.1.1
+  permission_handler: ^11.0.0
+  uuid: ^4.5.1
+
+
 
 dev_dependencies:
   flutter_test:
